# upnp-desc-to-yang

./: .gitignore  README.md  binary-light.yang  convert.py  dimmable-light.yang  embed-device-example.yang  generate_examples.sh  input.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
input/upnp_specs/audio_video/service/: AVTransport3.xml
input/upnp_specs/cloud_proxy/service/: CloudProxy1.xml  CloudTransport1.xml
input/upnp_specs/iot_management_and_control/service/: DataStore1.xml  SensorTransportGeneric1.xml
input/upnp_specs/networking/igd/: DeviceProtection1.xml
input/upnp_specs/remoting/: RemoteUIServer1.xml
input/upnp_specs/telephony/service/: Calendar1.xml  CallManagement2.xml
output/runs/: binary-light-ungrouped.yang  dimmable-light.yang  embed-device-example.yang
output/upnp_specs/audio_video/service/: av-transport.yang  connection-manager.yang  content-directory.yang  rendering-control.yang  scheduled-recording.yang
output/upnp_specs/remote_access/: inbound-connection-config.yang  rada-config.yang  rada-sync.yang  rata-config.yang
output/upnp_specs/remoting/: remote-ui-client.yang  remote-ui-server.yang
src/upnpdesc2yang/: converter.py  yang_helper.py  yang_template.py
src/upnpdesc2yang/common/: case_helper.py  util.py  yang_template.py
src/upnpdesc2yang/service_convert/: service.py  type_convert.py  upnp_common.py  yang_service.py
src/upnpdesc2yang/ungroup/: __init__.py  ungroup.py
tests/: test.yaml  test_command.py  test_file_list.py  test_upnp_dcp.py
tests/test_input/: ungroup-input.yang
(+52 files in other folders)
